Next and previous button mobile fix

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -81,17 +81,21 @@
 @keyframes slideNext {
     from {
         transform : translateX(1000%);
+        -webkit-transform : translateX(1000%);
     }
     to {
         transform : translateX(0%);
+        -webkit-transform : translateX(0%);
     }
 }
 @keyframes slidePrevious {
     from {
         transform : translateX(-1000%);
+        -webkit-transform : translateX(-1000%);
     }
     to {
         transform : translateX(0%);
+        -webkit-transform : translateX(0%);
     }
 }
 .slider {
@@ -112,9 +116,11 @@
                     overflow-x: hidden;
                 &.slideNext{
                     animation: slideNext 0.9s none;
+                    -webkit-animation: slideNext 0.9s none;
                 }
                 &.slidePrevious{
                     animation: slidePrevious 0.9s none;
+                    -webkit-animation: slidePrevious 0.9s none;
                 }
             }
         }
